SentryNative/SentryNative.cs


        [DllImport("sentryffi", CallingConvention = CallingConvention.Cdecl, EntryPoint = "sentry_value_new_message_event", ExactSpelling = true)]
        [return: NativeTypeName("sentry_value_t")]
        public static extern sentry_value_u sentry_value_new_message_event([NativeTypeName("sentry_level_t")] sentry_level_e level, [NativeTypeName("const char *")] sbyte* logger, [NativeTypeName("const char *")] sbyte* text);

        [DllImport("sentryffi", CallingConvention = CallingConvention.Cdecl, EntryPoint = "sentry_value_new_breadcrumb", ExactSpelling = true)]
        [return: NativeTypeName("sentry_value_t")]
        public static extern sentry_value_u sentry_value_new_breadcrumb([NativeTypeName("const char *")] sbyte* type, [NativeTypeName("const char *")] sbyte* message);

        [DllImport("sentryffi", CallingConvention = CallingConvention.Cdecl, EntryPoint = "sentry_value_to_msgpack", ExactSpelling = true)]
        [return: NativeTypeName("char *")]
        public static extern sbyte* sentry_value_to_msgpack([NativeTypeName("sentry_value_t")] sentry_value_u value, [NativeTypeName("size_t *")] UIntPtr* size_out);

        [DllImport("sentryffi", CallingConvention = CallingConvention.Cdecl, EntryPoint = "sentry_event_value_add_stacktrace", ExactSpelling = true)]
        public static extern void sentry_event_value_add_stacktrace([NativeTypeName("sentry_value_t")] sentry_value_u @event, [NativeTypeName("void **")] void** ips, [NativeTypeName("size_t")] UIntPtr len);

        [DllImport("sentryffi", CallingConvention = CallingConvention.Cdecl, EntryPoint = "sentry_unwind_stack", ExactSpelling = true)]
        [return: NativeTypeName("size_t")]
        public static extern UIntPtr sentry_unwind_stack([NativeTypeName("void *")] void* addr, [NativeTypeName("void **")] void** stacktrace_out, [NativeTypeName("size_t")] UIntPtr max_len);

        [DllImport("sentryffi", CallingConvention = CallingConvention.Cdecl, EntryPoint = "sentry_unwind_stack_from_ucontext", ExactSpelling = true)]
        [return: NativeTypeName("size_t")]
        public static extern UIntPtr sentry_unwind_stack_from_ucontext([NativeTypeName("const sentry_ucontext_t *")] sentry_ucontext_s* uctx, [NativeTypeName("void **")] void** stacktrace_out, [NativeTypeName("size_t")] UIntPtr max_len);

        [DllImport("sentryffi", CallingConvention = CallingConvention.Cdecl, EntryPoint = "sentry_uuid_nil", ExactSpelling = true)]
        [return: NativeTypeName("sentry_uuid_t")]
        public static extern sentry_uuid_s sentry_uuid_nil();

        [DllImport("sentryffi", CallingConvention = CallingConvention.Cdecl, EntryPoint = "sentry_uuid_new_v4", ExactSpelling = true)]
        [return: NativeTypeName("sentry_uuid_t")]
        public static extern sentry_uuid_s sentry_uuid_new_v4();

        [DllImport("sentryffi", CallingConvention = CallingConvention.Cdecl, EntryPoint = "sentry_uuid_from_string", ExactSpelling = true)]
        [return: NativeTypeName("sentry_uuid_t")]
        public static extern sentry_uuid_s sentry_uuid_from_string([NativeTypeName("const char *")] sbyte* str);

        [DllImport("sentryffi", CallingConvention = CallingConvention.Cdecl, EntryPoint = "sentry_uuid_from_bytes", ExactSpelling = true)]
        [return: NativeTypeName("sentry_uuid_t")]
        public static extern sentry_uuid_s sentry_uuid_from_bytes([NativeTypeName("const char [16]")] sbyte* bytes);

        [DllImport("sentryffi", CallingConvention = CallingConvention.Cdecl, EntryPoint = "sentry_uuid_is_nil", ExactSpelling = true)]
        public static extern int sentry_uuid_is_nil([NativeTypeName("const sentry_uuid_t *")] sentry_uuid_s* uuid);

        [DllImport("sentryffi", CallingConvention = CallingConvention.Cdecl, EntryPoint = "sentry_uuid_as_bytes", ExactSpelling = true)]
        public static extern void sentry_uuid_as_bytes([NativeTypeName("const sentry_uuid_t *")] sentry_uuid_s* uuid, [NativeTypeName("char [16]")] sbyte* bytes);

        [DllImport("sentryffi", CallingConvention = CallingConvention.Cdecl, EntryPoint = "sentry_uuid_as_string", ExactSpelling = true)]
        public static extern void sentry_uuid_as_string([NativeTypeName("const sentry_uuid_t *")] sentry_uuid_s* uuid, [NativeTypeName("char [37]")] sbyte* str);

        [DllImport("sentryffi", CallingConvention = CallingConvention.Cdecl, EntryPoint = "sentry_envelope_free", ExactSpelling = true)]
        public static extern void sentry_envelope_free([NativeTypeName("sentry_envelope_t *")] sentry_envelope_s* envelope);

        [DllImport("sentryffi", CallingConvention = CallingConvention.Cdecl, EntryPoint = "sentry_envelope_get_event", ExactSpelling = true)]
        [return: NativeTypeName("sentry_value_t")]
        public static extern sentry_value_u sentry_envelope_get_event([NativeTypeName("const sentry_envelope_t *")] sentry_envelope_s* envelope);

        [DllImport("sentryffi", CallingConvention = CallingConvention.Cdecl, EntryPoint = "sentry_envelope_serialize", ExactSpelling = true)]
        [return: NativeTypeName("char *")]
        public static extern sbyte* sentry_envelope_serialize([NativeTypeName("const sentry_envelope_t *")] sentry_envelope_s* envelope, [NativeTypeName("size_t *")] UIntPtr* size_out);

        [DllImport("sentryffi", CallingConvention = CallingConvention.Cdecl, EntryPoint = "sentry_envelope_write_to_file", ExactSpelling = true)]
        public static extern int sentry_envelope_write_to_file([NativeTypeName("const sentry_envelope_t *")] sentry_envelope_s* envelope, [NativeTypeName("const char *")] sbyte* path);

        [DllImport("sentryffi", CallingConvention = CallingConvention.Cdecl, EntryPoint = "sentry_transport_new", ExactSpelling = true)]
        [return: NativeTypeName("sentry_transport_t *")]
        public static extern sentry_transport_s* sentry_transport_new([NativeTypeName("void (*)(sentry_envelope_t *, void *)")] IntPtr send_func);

        [DllImport("sentryffi", CallingConvention = CallingConvention.Cdecl, EntryPoint = "sentry_transport_set_state", ExactSpelling = true)]
        public static extern void sentry_transport_set_state([NativeTypeName("sentry_transport_t *")] sentry_transport_s* transport, [NativeTypeName("void *")] void* state);

        [DllImport("sentryffi", CallingConvention = CallingConvention.Cdecl, EntryPoint = "sentry_transport_set_free_func", ExactSpelling = true)]
        public static extern void sentry_transport_set_free_func([NativeTypeName("sentry_transport_t *")] sentry_transport_s* transport, [NativeTypeName("void (*)(void *)")] IntPtr free_func);

        [DllImport("sentryffi", CallingConvention = CallingConvention.Cdecl, EntryPoint = "sentry_transport_set_startup_func", ExactSpelling = true)]
        public static extern void sentry_transport_set_startup_func([NativeTypeName("sentry_transport_t *")] sentry_transport_s* transport, [NativeTypeName("int (*)(const sentry_options_t *, void *)")] IntPtr startup_func);

        [DllImport("sentryffi", CallingConvention = CallingConvention.Cdecl, EntryPoint = "sentry_transport_set_shutdown_func", ExactSpelling = true)]
        public static extern void sentry_transport_set_shutdown_func([NativeTypeName("sentry_transport_t *")] sentry_transport_s* transport, [NativeTypeName("int (*)(uint64_t, void *)")] IntPtr shutdown_func);

        [DllImport("sentryffi", CallingConvention = CallingConvention.Cdecl, EntryPoint = "sentry_transport_free", ExactSpelling = true)]
        public static extern void sentry_transport_free([NativeTypeName("sentry_transport_t *")] sentry_transport_s* transport);

        [DllImport("sentryffi", CallingConvention = CallingConvention.Cdecl, EntryPoint = "sentry_new_function_transport", ExactSpelling = true)]
        [return: NativeTypeName("sentry_transport_t *")]
        public static extern sentry_transport_s* sentry_new_function_transport([NativeTypeName("void (*)(const sentry_envelope_t *, void *)")] IntPtr func, [NativeTypeName("void *")] void* data);

        [DllImport("sentryffi", CallingConvention = CallingConvention.Cdecl, EntryPoint = "sentry_options_new", ExactSpelling = true)]
        [return: NativeTypeName("sentry_options_t *")]
        public static extern sentry_options_s* sentry_options_new();

        [DllImport("sentryffi", CallingConvention = CallingConvention.Cdecl, EntryPoint = "sentry_options_free", ExactSpelling = true)]
        public static extern void sentry_options_free([NativeTypeName("sentry_options_t *")] sentry_options_s* opts);

        [DllImport("sentryffi", CallingConvention = CallingConvention.Cdecl, EntryPoint = "sentry_options_set_transport", ExactSpelling = true)]
        public static extern void sentry_options_set_transport([NativeTypeName("sentry_options_t *")] sentry_options_s* opts, [NativeTypeName("sentry_transport_t *")] sentry_transport_s* transport);

        [DllImport("sentryffi", CallingConvention = CallingConvention.Cdecl, EntryPoint = "sentry_options_set_before_send", ExactSpelling = true)]
        public static extern void sentry_options_set_before_send([NativeTypeName("sentry_options_t *")] sentry_options_s* opts, [NativeTypeName("sentry_event_function_t")] IntPtr func, [NativeTypeName("void *")] void* data);

        [DllImport("sentryffi", CallingConvention = CallingConvention.Cdecl, EntryPoint = "sentry_options_set_dsn", ExactSpelling = true)]
        public static extern void sentry_options_set_dsn([NativeTypeName("sentry_options_t *")] sentry_options_s* opts, [NativeTypeName("const char *")] sbyte* dsn);

        [DllImport("sentryffi", CallingConvention = CallingConvention.Cdecl, EntryPoint = "sentry_options_get_dsn", ExactSpelling = true)]
        [return: NativeTypeName("const char *")]
        public static extern sbyte* sentry_options_get_dsn([NativeTypeName("const sentry_options_t *")] sentry_options_s* opts);

        [DllImport("sentryffi", CallingConvention = CallingConvention.Cdecl, EntryPoint = "sentry_options_set_sample_rate", ExactSpelling = true)]
        public static extern void sentry_options_set_sample_rate([NativeTypeName("sentry_options_t *")] sentry_options_s* opts, double sample_rate);

        [DllImport("sentryffi", CallingConvention = CallingConvention.Cdecl, EntryPoint = "sentry_options_get_sample_rate", ExactSpelling = true)]
        public static extern double sentry_options_get_sample_rate([NativeTypeName("const sentry_options_t *")] sentry_options_s* opts);

        [DllImport("sentryffi", CallingConvention = CallingConvention.Cdecl, EntryPoint = "sentry_options_set_release", ExactSpelling = true)]
        public static extern void sentry_options_set_release([NativeTypeName("sentry_options_t *")] sentry_options_s* opts, [NativeTypeName("const char *")] sbyte* release);

        [DllImport("sentryffi", CallingConvention = CallingConvention.Cdecl, EntryPoint = "sentry_options_get_release", ExactSpelling = true)]
        [return: NativeTypeName("const char *")]
        public static extern sbyte* sentry_options_get_release([NativeTypeName("const sentry_options_t *")] sentry_options_s* opts);

        [DllImport("sentryffi", CallingConvention = CallingConvention.Cdecl, EntryPoint = "sentry_options_set_environment", ExactSpelling = true)]
        public static extern void sentry_options_set_environment([NativeTypeName("sentry_options_t *")] sentry_options_s* opts, [NativeTypeName("const char *")] sbyte* environment);

        [DllImport("sentryffi", CallingConvention = CallingConvention.Cdecl, EntryPoint = "sentry_options_get_environment", ExactSpelling = true)]
        [return: NativeTypeName("const char *")]
        public static extern sbyte* sentry_options_get_environment([NativeTypeName("const sentry_options_t *")] sentry_options_s* opts);
